fixing mobile size and add dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,7 @@ nav {
 }
 .nav-menu-btn i {
     font-size: 28px;
+    color: var(--text-color-second);
     cursor: pointer;
 }
 .nav-button {
